--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
     "type-check": "tsc --noEmit"
@@ -18,7 +18,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "date-fns": "^3.0.6",
-    "expo": "^54.0.31",
+    "expo": "~50.0.0",
     "expo-constants": "~15.4.5",
     "expo-notifications": "~0.27.6",
     "expo-status-bar": "~1.11.1",
